2011-11-15  Juanma Barranquero  <lekktu@gmail.com>

	* epg.el (epg-start-decrypt, epg-start-verify, epg-start-sign)
	(epg-start-encrypt, epg-start-export-keys, epg-start-import-keys)
	(epg-start-receive-keys, epg-start-delete-keys, epg-start-sign-keys)
	(epg-start-generate-key, epg-context-set-progress-callback): Fix typos.

2011-11-15  Glenn Morris  <rgm@gnu.org>

	* mail/rmailmm.el (rmail-mime-entity, rmail-mime-entity-segment)
	(rmail-mime-shown-mode, rmail-mime-hidden-mode, rmail-mime-raw-mode)
	(rmail-mime-toggle-hidden, rmail-mime-insert-tagline)
	(rmail-mime-insert-header, rmail-mime-handle, rmail-mime-parse)
	(rmail-mime, rmail-show-mime): Doc fixes.

	* term/ns-win.el (mode-line-frame-identification):
	Leave it alone.  (Bug#10051)

	* simple.el (mark-whole-buffer): Doc fix.  (Bug#10023)

	* mail/rmailout.el (rmail-output-to-rmail-buffer):
	Handle empty buffers.  (Bug#9978)

2011-11-14  Juanma Barranquero  <lekktu@gmail.com>

	* international/mule.el (define-charset):
	* mail/rmailmm.el (rmail-mime-find-header-encoding):
	* progmodes/prolog.el (prolog-mode-hook, prolog-inferior-mode-hook):
	* progmodes/verilog-mode.el (verilog-backward-token):
	* textmodes/ispell.el (lookup-words):
	* textmodes/sgml-mode.el (sgml-guess-indent): Fix typos.

2011-11-14  Glenn Morris  <rgm@gnu.org>

	* progmodes/executable.el
	(executable-make-buffer-file-executable-if-script-p):
	Handle file-modes returning nil.

	* mail/rmailsum.el (rmail-summary): Remove movement to beginning of
	message - not necessary, and causes problems.  (Bug#9831)

	* mail/rmailsum.el (rmail-new-summary): Preserve message number.

	* mail/rmail.el (rmail-no-mail-p): Remove mode-line N/M indicator.

	* mail/rmailsum.el (rmail-summary, rmail-new-summary)
	(rmail-new-summary-1): Allow empty summaries.  (Bug#9964)
	(rmail-new-summary): Remember that rmail-summary-buffer is buffer-local.

2011-11-12  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window-resize, delete-window): Use window-splits